--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://mfaizmohamad.github.io/portfolio_2024/",
-
   "scripts": {
     "dev": "vite",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -18,9 +17,11 @@
     "@heroicons/react": "^2.1.5",
     "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.7",
+    "framer-motion": "^11.5.6",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-tilt": "^1.0.2",
     "three": "^0.168.0"
   },
   "devDependencies": {
