--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@heroicons/react": "^2.1.5",
     "@react-three/drei": "^9.113.0",
     "@react-three/fiber": "^8.17.7",
-    "framer-motion": "^11.5.6",
+    "framer-motion": "^11.9.0",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "react-tilt": "^1.0.2",
     "three": "^0.168.0"
   },
